# xNVMe

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTORS.md  Makefile  configure  meson.build  meson_options.txt
.github/workflows/: coverity.yml  freebsd-build.yml  linux-binaries-test.yml  linux-build-test.yml  windows-build-test.yml
cijoe/tests/logic/: test_xnvme_tests_enum.py
docs/getting_started/: index.rst
examples/: meson.build  xnvme_dev.c  xnvme_enum.c
include/: xnvme_be_linux.h
lib/: meson.build  xnvme_be_linux.c  xnvme_be_linux_async_fixed_bufs.c  xnvme_be_linux_async_fixed_bufs_reg_ring.c  xnvme_be_linux_async_liburing.c  xnvme_be_linux_async_reg_ring.c  xnvme_be_linux_nvme.c
scripts/: bundle.py  dist_zip_inject.py  meson.build
scripts/pkgs/: alpine-latest.txt  debian-bullseye.txt  debian-buster.txt  debian-stretch.sh  debian-stretch.txt  freebsd-13.txt  ubuntu-bionic.txt  ubuntu-focal.txt  ubuntu-xenial.txt  windows-2019.txt
src/: meson.build  xnvme_be_spdk_dev.c  xnvme_be_windows.c
subprojects/packagefiles/fio/: meson.build
subprojects/packagefiles/liburing/: meson.build
subprojects/packagefiles/spdk/: meson.build
tests/: enum.c  meson.build
tools/: meson.build
tools/fio-engine/: meson.build
